# experimental

./: .editorconfig  .gitignore  Cargo.toml  cabal.project
core/hs/: webar-core.cabal
core/hs/src/Webar/: Digest.hs  Time.hs
core/hs/src/Webar/Codec/: GCbor.hs
core/hs/src/Webar/Codec/GCbor/: Key.hs  Map.hs  Set.hs  TH.hs
core/hs/src/Webar/Codec/GCbor/Internal/: Decoding.hs  Encoding.hs  Ord.hs
core/hs/src/Webar/Text/: Normalized.hs  RawUtf8.hs
core/hs/tests/gcbor/: Common.hs  Main.hs  Product.hs  Sum.hs  data
core/hs/tests/gcbor-ord/: Main.hs
core/rs/: Cargo.toml
core/rs-internal/: Cargo.toml
core/rs-internal/src/: lib.rs
core/rs-internal/src/text/: raw_utf8.rs
core/rs-macros/: Cargo.toml
core/rs-macros/src/: gcbor.rs  lib.rs
core/rs-macros/src/gcbor/: cmp.rs  decode.rs  encode.rs  generics.rs  rename.rs
core/rs-macros/src/text/: raw_utf8.rs
core/rs/src/: bytes.rs  digest.rs  lib.rs  time.rs
core/rs/src/codec/: gcbor.rs
core/rs/src/codec/gcbor/: map.rs  set.rs
core/rs/src/codec/gcbor/internal/: cmp.rs  decoding.rs  encoding.rs
core/rs/src/codec/gcbor/support/: tracing.rs
core/rs/src/codec/gcbor/support/tracing/: valuable.rs
core/rs/src/text/: normalized.rs  raw_utf8.rs
core/rs/tests/gcbor/: main.rs  product.rs  sum.rs
core/rs/tests/gcbor-ord/: main.rs
http-lib/core/: Cargo.toml
http-lib/core/src/: fetch.rs  lib.rs  utils.rs
http-lib/core/src/blob/: index.rs  store.rs
http-lib/lib/: Cargo.toml
http-lib/lib/src/: blob.rs  lib.rs  log.rs  tar_sink.rs  tls.rs  traffic.rs
http-lib/lib/src/log/: gcbor_layer.rs  serde_layer.rs
