[workspace]
resolver = "2"
members = ["core/rs"]


[workspace.package]
license = "AGPL-3.0-only"

[workspace.dependencies]
rustix = { version = "0.38.34", features = ["fs"] }
uuid = { version = "1.8.0", features = ["serde"] }
sha2 = "0.10.8"
phf = { version = "0.11.2", features = ["macros"] }
hex-literal = "0.4.1"
const-hex = "1.11.3"
thiserror = "1.0.61"
