[workspace]
resolver = "2"
members = [
  "core/rs-internal",
  "core/rs-macros",
  "core/rs",
  "http-lib/lib",
  "http-lib/core",
]


[workspace.package]
license = "AGPL-3.0-only"

[workspace.dependencies]
rustix = { version = "0.38.34", features = ["fs"] }
uuid = { version = "1.8.0", features = ["serde"] }
phf = { version = "0.11.2", features = ["macros"] }
hex-literal = "0.4.1"
const-hex = "1.11.3"
thiserror = "1.0.61"
anyhow = "1.0.95"
tracing = { version = "0.1.41", features = ["valuable"] }
valuable = { version = "0.1.1", features = ["derive"] }
indicatif = "0.17.11"
tracing-indicatif = "0.3.9"
tar = "0.4.43"
webar-core = { path = "./core/rs" }
