[package]
name = "webar-core-macros"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "0.20.9"
quote = "1.0.36"
proc-macro2 = "1.0.84"
syn = "2.0.66"
webar-core-internal = { path = "../rs-internal" }
