[package]
name = "webar-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium-io = "0.2.2"
ciborium-ll = "0.2.2"
uuid.workspace = true
rustix = { workspace = true, features = ["time"] }
thiserror.workspace = true

[dev-dependencies]
paste = "1.0.15"
