[package]
name = "webar-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium-io = "0.2.2"
ciborium-ll = "0.2.2"
uuid.workspace = true
rustix = { workspace = true, features = ["time"] }
thiserror.workspace = true
webar-core-internal = { path = "../rs-internal" }
webar-core-macros = { path = "../rs-macros" }
sha2 = "0.10.8"
valuable.workspace = true

[dev-dependencies]
hex-literal.workspace = true
paste = "1.0.15"
proptest = "1.5.0"
